doc/paper/tst/jalangi_test/RESULTS_V2/RWX/greg_pc/timeResultsLya.txt
The name of file 3d-cube.js

real	12m18.514s
user	12m15.235s
sys	0m0.883s
The name of file 3d-morph.js

real	13m31.023s
user	13m21.000s
sys	0m1.082s
The name of file 3d-raytrace.js

real	13m21.197s
user	13m8.535s
sys	0m1.054s
The name of file access-binary-trees.js

real	12m50.958s
user	12m40.178s
sys	0m1.314s
The name of file access-fannkuch.js

real	13m7.815s
user	12m54.486s
sys	0m0.731s
The name of file access-nbody.js

real	13m12.511s
user	13m7.884s
sys	0m1.443s
The name of file access-nsieve.js

real	12m37.571s
user	12m29.441s
sys	0m1.785s
The name of file bitops-3bit-bits-in-byte.js

real	12m38.450s
user	12m27.865s
sys	0m1.557s
The name of file bitops-bits-in-byte.js

real	11m58.520s
user	11m57.186s
sys	0m0.196s
The name of file bitops-bitwise-and.js

real	11m57.899s
user	11m57.755s
sys	0m0.156s
The name of file bitops-nsieve-bits.js

real	0m0.258s
user	0m0.251s
sys	0m0.008s
The name of file controlflow-recursive.js

real	0m0.260s
user	0m0.263s
sys	0m0.004s
The name of file crypto-aes.js

real	0m12.456s
user	0m13.040s
sys	0m0.112s
The name of file crypto-md5.js

real	0m4.995s
user	0m5.006s
sys	0m0.016s
The name of file crypto-sha1.js

real	0m4.656s
user	0m4.648s
sys	0m0.016s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/grigorisntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/grigorisntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:364:26)
    at Object.<anonymous> (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:379:28)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:643:30)
    at Object.Module._extensions..js (module.js:654:10)
    at Module.load (module.js:556:32)

real	0m0.056s
user	0m0.056s
sys	0m0.000s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/grigorisntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:107:22)
    at Object.<anonymous> (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:498:28)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:643:30)
    at Object.Module._extensions..js (module.js:654:10)
    at Module.load (module.js:556:32)
    at tryModuleLoad (module.js:499:12)
    at Function.Module._load (module.js:491:3)
    at Module.require (module.js:587:17)

real	0m0.055s
user	0m0.048s
sys	0m0.008s
The name of file math-cordic.js

real	0m40.452s
user	0m40.443s
sys	0m0.016s
The name of file math-partial-sums.js

real	6m44.094s
user	6m44.051s
sys	0m0.052s
The name of file math-spectral-norm.js

real	0m0.250s
user	0m0.252s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.686s
user	0m0.702s
sys	0m0.000s
The name of file string-base64.js

real	0m31.775s
user	0m31.777s
sys	0m0.040s
The name of file string-fasta.js

real	0m43.744s
user	0m43.753s
sys	0m0.024s
The name of file string-tagcloud.js

real	0m14.363s
user	0m14.376s
sys	0m0.092s
The name of file string-unpack-code.js

real	0m4.868s
user	0m5.045s
sys	0m0.012s
The name of file string-validate-input.js

real	0m0.115s
user	0m0.128s
sys	0m0.004s
